# poc-realtime-ai-assistant

./: .gitignore  personalization.json  pyproject.toml
AI_DOCS/: FunctionTools.md  suggestion.md
src/realtime_api_async_python/: main.py
src/realtime_api_async_python/modules/: async_microphone.py  email_agent.py  gen_descriptor.py  llm.py  logging.py  mermaid.py  metatask.py  openai_realtime.py  tools.py  utils.py  whisper_speechtotext.py
tests/: test_descriptor_gen.py  test_email_agent.py  test_memory_management.py  test_utils.py
